# oclm

./: CMakeLists.txt  Doxyfile  README
UnitTests/: CMakeLists.txt  catch_context.cpp  catch_device.cpp  catch_kernel.cpp  catch_platform.cpp  catch_program.cpp
cmake/: FindOCLM_OpenCL.cmake  OCLM_AddLibrary.cmake  OCLM_FindPackage.cmake  OCLM_Include.cmake  OCLM_ListContains.cmake  OCLM_ParseArguments.cmake
examples/: CMakeLists.txt  printInfos.cpp  speedTest.cpp  vecadd.cpp
include/oclm/: async.hpp  buffer.hpp  command_queue.hpp  config.hpp  context.hpp  context_info.hpp  debug.hpp  device.hpp  device_info.hpp  event.hpp  exception.hpp  get_info.hpp  init.hpp  kernel.hpp  packaged_kernel.hpp  platform.hpp  platform_info.hpp  program.hpp  selector.hpp
include/oclm/kernelUtil/: readCL.hpp
include/oclm/kernelUtil/kernels/: speedTest.cl
include/oclm/util/: high_resolution_timer.hpp
src/: CMakeLists.txt  command_queue.cpp  device_info.cpp  platform.cpp
